# STL-cheatsheet

./: CMakeLists.txt  README.md  utils.cpp  utils.h
Algorithms/Heaps/: Heap.cpp  Heap.md  HeapPractical.cpp
Algorithms/Sorting/: Partition.cpp  Sorting.cpp  Sorting.md
